infras/k8s-yaml/cilium-policies/02-allow-egress-data.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-vault-db"
  namespace: "job7189-apps"
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: vault
    toPorts:
    - ports:
      - port: "8200"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: data
    toPorts:
    - ports:
      - port: "3306"
        protocol: TCP
      - port: "6379"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: security
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      - port: "443"
        protocol: TCP
